@@ -1,91 +1,0 @@
-/* XPM */
-static char *stock_stop_16_xpm[] = {
-/* columns rows colors chars-per-pixel */
-"16 16 69 1",
-"  c black",
-". c #0c0300",
-"X c #120602",
-"o c #180b04",
-"O c #361103",
-"+ c #3a1303",
-"@ c #4c1905",
-"# c #571f06",
-"$ c #54200a",
-"% c #6d2307",
-"& c #653219",
-"* c #732507",
-"= c #7a2807",
-"- c #842c09",
-"; c #882e0a",
-": c #8f320b",
-"> c #8e3a17",
-", c #95360b",
-"< c #9d350a",
-"1 c #923a13",
-"2 c #a2360b",
-"3 c #a3390b",
-"4 c #ac3b0d",
-"5 c #b23e0d",
-"6 c #aa4516",
-"7 c #bc440f",
-"8 c #b14f1f",
-"9 c #bb4512",
-"0 c #bf471b",
-"q c #b55626",
-"w c #c3470e",
-"e c #c5480f",
-"r c #ca4b0f",
-"t c #c54115",
-"y c #cb441d",
-"u c #cd4c10",
-"i c #cb4b1e",
-"p c #d5461f",
-"a c #db4c16",
-"s c #d55112",
-"d c #c64b23",
-"f c #ce4f21",
-"g c #ce5023",
-"h c #cf5328",
-"j c #d44a25",
-"k c #d24e29",
-"l c #d84723",
-"z c #d45222",
-"x c #d85323",
-"c c #d9522d",
-"v c #d15d35",
-"b c #d95c37",
-"n c #e05713",
-"m c #e45a14",
-"M c #e15b19",
-"N c #c96a41",
-"B c #eaddd7",
-"V c #f3dcd2",
-"C c #eae1dc",
-"Z c #f3e3dc",
-"A c #eee5e1",
-"S c #f5e9e3",
-"D c #f3ece9",
-"F c #f8eeea",
-"G c #f5f0ee",
-"H c #faf3ef",
-"J c #f8f3f1",
-"K c #fefefe",
-"L c None",
-/* pixels */
-"LLLLLLLLLLLLLLLL",
-"LLLL        LLLL",
-"LLL  &qsu3$  LLL",
-"LL oqmnnsur,X LL",
-"L  qsziaaid9,  L",
-"L &MxAAhzCJk5@ L",
-"L 6asCKSDKHc5; L",
-"L raacGKKVbp52 L",
-"L tuuzDKKZvt42 L",
-"L <efBKVVKFj4= L",
-"L #9dVZvNSDl<+ L",
-"L  15ljt0kjy*  L",
-"LL X>44443<%. LL",
-"LLL  @;22*O  LLL",
-"LLLL        LLLL",
-"LLLLLLLLLLLLLLLL"
-};
